<resources>
    <string name="app_name">Turistiando</string>

    <string name="hotel">Hoteles</string>
    <string name="pajaritos">Aves Que Puedes Encontrar</string>
    <string name="restautante">Restaurantes</string>

    <string name="creador">Acerca de</string>
    <string name="ingles">Ingles</string>
    <string name="español">Español</string>

    <string name="nombre">Nombre </string>
    <string name="Nombre">Stiven Muñoz Usuga</string>
    <string name="Descripcción">Tengo 19 Años Soy una persona que me encanta hacer aplicaciones, Soy una persona Tecnico en Desarrolo De Software y me encanta desarrollar paginas web </string>
    <string name="Contatos">Contactos</string>
    <string name="email">Correo Electronico</string>
    <string name="Email">Stivenusuga019@gmail.com</string>
    <string name="Celular">Celular</string>
    <string name="celular">+57 3246756251</string>

    <string name="ave1">Paloma de luto - El gentil pájaro cantor</string>
    <string name="ave2">Cardenal del Norte - El ave de jardín más común del norte de EE. UU.</string>
    <string name="ave3">Petirrojo americano - El pájaro más común del patio trasero durante el verano</string>
    <string name="ave4">Cuervo americano - El depredador negro</string>
    <string name="salir">Salir</string>
    <string name="titulo">Explora Jardin Tu Pueblo</string>

    <string name="NombreHotel1">Hotel Orillas del PizanoSe abre en una ventana nueva</string>
    <string name="NombreHotel2">Travesía Original Vísta Farallónes</string>
    <string name="NombreHotel3">Hospedaje Campestre El Rancho de JeroSe abre en una ventana nueva</string>
    <string name="NombreHotel4">Hospedaje Rural La BoiraSe abre en una ventana nueva</string>


    <string name="descripcionhotel1">El Hotel Orillas del Pizano se encuentra en Jardín y ofrece jardín, terraza, restaurante y bar. El alojamiento ofrece entretenimiento nocturno y cocina compartida.</string>
    <string name="descripcionhotel2">El Travesía Original Vísta Farallónes se encuentra en Jardín y ofrece jardín, terraza, bar y WiFi gratuita.</string>
    <string name="descripcionhotel3">El Hospedaje Campestre El Rancho de Jero se encuentra en Jardín y ofrece vistas a la ciudad, jardín, salón compartido, terraza, bar y zona de barbacoa.</string>
    <string name="descripcionhotel4">El Hospedaje Rural La Boira está situado en Jardin, a 1,5 km del parque central. Ofrece WiFi y aparcamiento gratuitos. Este alojamiento se encuentra rodeado de jardines.</string>

    <string name="PrecioHotel1">COP 2.041.200</string>
    <string name="PrecioHotel2">COP 1.318.620</string>
    <string name="PrecioHotel3">COP 1.478.000</string>
    <string name="PrecioHotel4">COP 1.478.000</string>


    <string name="NombreRes1">Bon appétit</string>
    <string name="NombreRes2">Realismo Mágico</string>
    <string name="NombreRes3">Bella Italia Pizzeria y Grill</string>
    <string name="NombreRes4">Creperia Trigo y Centeno</string>


    <string name="desRestaurante1">Apto para vegetarianos, Opciones veganas, Opciones sin gluten</string>
    <string name="desRestaurante2">Reservas, Asiento, Servicio de mesa</string>
    <string name="desRestaurante3">Apto para vegetarianos, Opciones veganas</string>
    <string name="desRestaurante4">Apto para vegetarianos</string>

    <string name="PrecioRes1">$ 8.000 - $ 30.000</string>
    <string name="PrecioRes2">$ 10.000 - $ 30.000</string>
    <string name="PrecioRes3">$ 14.000 - $ 35.000</string>
    <string name="PrecioRes4">$ 10.000 - $ 40.000</string>

</resources>